--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,21 @@
 {
   "compilerOptions": {
-    "declaration": true,
-    "module": "esnext",
-    "outDir": "dist",
+    "tsBuildInfoFile": "dist/.tsbuildinfo",
+    "incremental": true,
+    "skipLibCheck": true,
+    "target": "ESNext",
+    "module": "es2022",
+    "moduleResolution": "bundler",
+    "allowJs": true,
+    "checkJs": true,
     "rootDir": "src",
     "strict": true,
-    "target": "es2022",
-    "moduleResolution": "bundler"
+    "noPropertyAccessFromIndexSignature": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitAny": true,
+    "declaration": true,
+    "outDir": "dist",
+    "verbatimModuleSyntax": true
   },
-  "include": ["src/**/*"]
+  "include": ["src"]
 }
